created asset-screen & nav-bar

--- a/Home-page.html
+++ b/Home-page.html
@@ -19,7 +19,7 @@
       </div>
       <div class="status-bar__column">
         <span>100%</span>
-        <i class="fas fa-battery-full fa-lg"></i>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <header class="screen-header">
@@ -30,10 +30,10 @@
         </div>
         <div class="screen-header__icons">
           <span>
-            <i class="fas fa-smile fa-lg"></i>
+            <i class="fas fa-smile"></i>
           </span>
           <span>
-            <i class="fas fa-bell fa-lg"></i>
+            <i class="fas fa-bell"></i>
           </span>
         </div>
       </div>
@@ -75,45 +75,96 @@
             </div>
           </div>
           <div class="asset-box__main">
-            <div class="user-component__column">
+            <div class="asset-box__column">
               <img
                 src="img/kakao-toss.jpg"
-                class="user-component__avatar user-component__avatar"
+                class="asset-box__avatar asset-box__avatar"
               />
-              <div class="user-component__text">
-                <h4 class="user-component__title">
-                  민O야 잘 지내니 거긴 어때
-                  <span>
-                    4
-                    <i class="fas fa-bell-slash fa-sm"></i>
-                    <i class="fas fa-star fa-sm"></i>
-                  </span>
-                </h4>
-                <h6 class="user-component__subtitle">
-                  그걸 잘 조율해야하는디 어려운 점이 많아
-                </h6>
+              <div class="asset-box__text">
+                <div class="asset-box__title">
+                  <span>입출금통장</span>
+                </div>
+                <div class="asset-box__money">
+                  <span>34,501,235원</span>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="asset-box__main">
-            <div class="asset-box__word">
-              <span>자산</span>
-            </div>
-            <div class="asset-box__chevron">
-              <i class="fas fa-chevron-right fa-sm"></i>
+            <div class="asset-box__send">
+              <span>송금</span>
             </div>
           </div>
           <div class="asset-box__main">
-            <div class="asset-box__word">
-              <span>자산</span>
+            <div class="asset-box__column">
+              <img
+                src="img/toss-i.jpg"
+                class="asset-box__avatar asset-box__avatar--xl"
+              />
+              <div class="asset-box__text">
+                <div class="asset-box__title">
+                  <span>토스뱅크 통장</span>
+                </div>
+                <div class="asset-box__money">
+                  <span>5,486,123원</span>
+                </div>
+              </div>
             </div>
-            <div class="asset-box__chevron">
-              <i class="fas fa-chevron-right fa-sm"></i>
+            <div class="asset-box__send">
+              <span>송금</span>
+            </div>
+          </div>
+          <div class="asset-box__main">
+            <div class="asset-box__column">
+              <img
+                src="img/toss-i.jpg"
+                class="asset-box__avatar asset-box__avatar--xl"
+              />
+              <div class="asset-box__text">
+                <div class="asset-box__title">
+                  <span>포인트·머니·1개</span>
+                </div>
+                <div class="asset-box__money">
+                  <span>3600원</span>
+                </div>
+              </div>
+            </div>
+            <div class="asset-box__send">
+              <span>송금</span>
             </div>
           </div>
         </div>
       </div>
     </main>
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__btn">
+          <a class="nav__link" href="Home-page.html"
+            ><i class="fas fa-home"></i></a
+          ><span>홈</span>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="benefits.html">
+            <i class="fas fa-gem"></i> </a
+          ><span>혜택</span>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="send.html"
+            ><i class="fas fa-won-sign"></i></a
+          ><span>송금</span>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="stock.html">
+            <span class="nav__dot"></span>
+            <i class="fas fa-wave-square"></i> </a
+          ><span>주식</span>
+        </li>
+        <li class="nav__btn">
+          <a class="nav__link" href="all.html">
+            <span class="nav__dot"></span>
+            <i class="fas fa-bars"></i> </a
+          ><span>전체</span>
+        </li>
+      </ul>
+    </nav>
 
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
