almost done home-screen :creating etc-box

--- a/Home-page.html
+++ b/Home-page.html
@@ -123,7 +123,7 @@
                   <span>포인트·머니·1개</span>
                 </div>
                 <div class="asset-box__money">
-                  <span>3600원</span>
+                  <span>3,600원</span>
                 </div>
               </div>
             </div>
@@ -131,6 +131,71 @@
               <span>송금</span>
             </div>
           </div>
+        </div>
+        <div class="consumption-box">
+          <div class="consumption-box__main">
+            <div class="consumption-box__word">
+              <span>소비</span>
+            </div>
+          </div>
+          <div class="consumption-box__main">
+            <div class="consumption-box__column">
+              <img
+                src="img/card.jpg"
+                class="consumption-box__avatar consumption-box__avatar--m"
+              />
+              <div class="consumption-box__text">
+                <div class="consumption-box__title">
+                  <span>이번 달 쓴 금액</span>
+                </div>
+                <div class="consumption-box__money">
+                  <span>384,272원</span>
+                </div>
+              </div>
+            </div>
+            <div class="consumption-box__send">
+              <span>내역</span>
+            </div>
+          </div>
+        </div>
+        <div class="investment-box">
+          <div class="investment-box__main">
+            <div class="investment-box__word">
+              <span>투자</span>
+            </div>
+          </div>
+          <div class="investment-box__main">
+            <div class="investment-box__column">
+              <img
+                src="img/investment.jpg"
+                class="investment-box__avatar investment-box__avatar--m"
+              />
+              <div class="investment-box__text">
+                <div class="investment-box__title">
+                  <span>증권 계좌 연결하고</span>
+                </div>
+                <div class="investment-box__money">
+                  <span>포트폴리오 모아보기</span>
+                </div>
+              </div>
+            </div>
+            <div class="investment-box__chevron">
+              <i class="fas fa-chevron-right fa-sm"></i>
+            </div>
+          </div>
+        </div>
+        <div class="etc-box">
+          <div class="etc-box__first">
+            <div></div>
+            <span>1분 만에</span>
+            <span>내 보험 전부 조회</span>
+          </div>
+          <div class="etc-box__second">
+            <span>혜택 주는</span>
+            <span>차 보험료 조회</span>
+          </div>
+          <div class="etc-box__third"></div>
+          <div class="etc-box__forth"></div>
         </div>
       </div>
     </main>
