complete Home-screen

--- a/Home-page.html
+++ b/Home-page.html
@@ -185,17 +185,47 @@
           </div>
         </div>
         <div class="etc-box">
-          <div class="etc-box__first">
-            <div></div>
+          <div class="etc-box__mini">
             <span>1분 만에</span>
-            <span>내 보험 전부 조회</span>
+            <span>내 보험</span>
+            <span>전부 조회</span>
+            <div class="etc-box__first-icon">
+              <span><i class="fas fa-shield-alt"></i></span>
+            </div>
           </div>
-          <div class="etc-box__second">
+          <div class="etc-box__mini">
             <span>혜택 주는</span>
-            <span>차 보험료 조회</span>
+            <span>차 보험료</span>
+            <span>조회</span>
+            <div class="etc-box__second-icon">
+              <span><i class="fas fa-car"></i></span>
+            </div>
           </div>
-          <div class="etc-box__third"></div>
-          <div class="etc-box__forth"></div>
+          <div class="etc-box__mini">
+            <span>최근</span>
+            <span>오늘의</span>
+            <span>머니 팁</span>
+            <div class="etc-box__third-icon">
+              <span><i class="fas fa-lightbulb"></i></span>
+            </div>
+          </div>
+          <div class="etc-box__mini">
+            <span>인기</span>
+            <span>더보기</span>
+          </div>
+        </div>
+        <div class="etc-btn">
+          <div class="etc-btn__screen-setting">
+            <span><i class="fas fa-cog"></i></span>
+            <span>화면 설정 </span>
+          </div>
+          <div class="etc-btn__add-asset">
+            <span><i class="fas fa-plus"></i></span>
+            <span>자산 추가</span>
+          </div>
+        </div>
+        <div class="personal-info">
+          <span>개인정보처리방침 보기</span>
         </div>
       </div>
     </main>
