--- a/Home-page.html
+++ b/Home-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>toss-clone</title>
+    <title>tass-clone</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -26,7 +26,7 @@
       <div class="screen-header__container">
         <div class="screen-header__title">
           <span><i class="fas fa-shield-alt"></i></span>
-          <span>toss</span>
+          <span>tass</span>
         </div>
         <div class="screen-header__icons">
           <span>
@@ -47,7 +47,7 @@
               <i class="fas fa-lightbulb"></i>
             </div>
             <div class="home-box__content">
-              <span>오늘 주식 맞히고 토스증권에서</span>
+              <span>오늘 주식 맞히고 태스증권에서</span>
               <span>주식 최대 8만원 받기</span>
             </div>
           </div>
@@ -58,7 +58,7 @@
         <div class="home-box">
           <div class="home-box__info">
             <div class="home-box__word">
-              <span>토스뱅크</span>
+              <span>태스뱅크</span>
             </div>
           </div>
           <div class="home-box__chevron">
@@ -101,7 +101,7 @@
               />
               <div class="asset-box__text">
                 <div class="asset-box__title">
-                  <span>토스뱅크 통장</span>
+                  <span>태스뱅크 통장</span>
                 </div>
                 <div class="asset-box__money">
                   <span>5,486,123원</span>
