--- a/benefits.html
+++ b/benefits.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>toss-clone</title>
+    <title>benefits-page</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -74,7 +74,7 @@
               <i class="fas fa-coins"></i>
             </div>
             <div class="benefits-page__column-text">
-              <span>토O뱅크로 이동해서</span>
+              <span>태스뱅크로 이동해서</span>
               <span>지금 이자 받기</span>
             </div>
           </div>
@@ -107,7 +107,7 @@
               <i class="fas fa-user-friends"></i>
             </div>
             <div class="benefits-page__column-text">
-              <span>친구와 함께 토스 켜고</span>
+              <span>친구와 함께 태스 켜고</span>
               <span>포인트 받기</span>
             </div>
           </div>
@@ -118,7 +118,7 @@
               <i class="fas fa-flag-usa"></i>
             </div>
             <div class="benefits-page__column-text">
-              <span>토O뱅크 체크카드 쓰고</span>
+              <span>태스뱅크 체크카드 쓰고</span>
               <span>해외주식 받기</span>
             </div>
           </div>
@@ -129,7 +129,7 @@
               <i class="fas fa-lightbulb"></i>
             </div>
             <div class="benefits-page__column-text">
-              <span>토O증권 · 어떤 주식이 오를까요?</span>
+              <span>태스증권 · 어떤 주식이 오를까요?</span>
               <span>주식 최대 80,000원 받기</span>
             </div>
           </div>
@@ -140,7 +140,7 @@
               <i class="fas fa-wave-square"></i>
             </div>
             <div class="benefits-page__column-text">
-              <span>토O증권에서 투자하고</span>
+              <span>태스증권에서 투자하고</span>
               <span>무료 주식 받기</span>
             </div>
           </div>
@@ -151,7 +151,7 @@
               <i class="fas fa-hat-wizard"></i>
             </div>
             <div class="benefits-page__column-text">
-              <span>마법사님이 준비한 토O뱅크</span>
+              <span>마법사님이 준비한 태스뱅크</span>
               <span>모임지원금 확인하기</span>
             </div>
           </div>
