--- a/Home-page.html
+++ b/Home-page.html
@@ -19,7 +19,7 @@
       </div>
       <div class="status-bar__column">
         <span>100%</span>
-        <i class="fas fa-battery-full"></i>
+        <i class="fas fa-battery-full fa-lg"></i>
       </div>
     </div>
     <header class="screen-header">
