complete: stock-page

--- a/stock.html
+++ b/stock.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Send-page</title>
+    <title>stock-page</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -28,7 +28,214 @@
         <span><i class="fas fa-cog fa-lg"></i></span>
       </div>
     </header>
-    <main class="stock-page"></main>
+    <main class="stock-page">
+      <div class="stock-page__title">
+        <div class="stock-page__title-text"><span>토스증권</span></div>
+        <div class="stock-page__title-kind">
+          <span>코스피</span>
+          <span>2427.90</span>
+        </div>
+      </div>
+      <div class="stock-page__menu">
+        <div class="stock-page__menu-my"><span>내 주식</span></div>
+        <div class="stock-page__menu-find"><span>오늘의 발견</span></div>
+      </div>
+      <div class="stock-page__advertisement">
+        <div class="stock-page__advertisement-text">
+          <div class="stock-page__advertisement-text__first-column">
+            <span>증권 계좌 만들면</span>
+            <span>해외주식 무료로 드려요</span>
+          </div>
+          <div class="stock-page__advertisement-text__second-column">
+            <span>무료 주식 받기</span>
+          </div>
+        </div>
+        <div class="stock-page__advertisement-icon">
+          <img src="img/디즈니.jpg" />
+        </div>
+      </div>
+      <div class="stock-page__live-chart">
+        <div class="stock-page__live-chart__text">
+          <span>실시간 차트</span>
+        </div>
+        <div class="stock-page__live-chart__menu">
+          <span>인기</span>
+          <span>거래량</span>
+          <span>급상승</span>
+          <span>급하락</span>
+          <span>관심</span>
+        </div>
+        <ul class="stock-page__live-chart__list">
+          <li class="stock-page__list-column">
+            <div class="stock-page__column-front">
+              <div class="stock-page__list-icon">
+                <span>1</span>
+                <img src="img/테슬라.jpg" />
+              </div>
+              <div class="stock-page__list-text">
+                <span>테슬라</span>
+                <div class="stock-page__list-percent-minus">
+                  <span>265,536원</span>
+                  <span>-0.07%</span>
+                </div>
+              </div>
+            </div>
+            <div class="stock-page__column-back">
+              <i class="fas fa-heart fa-lg"></i>
+            </div>
+          </li>
+          <li class="stock-page__list-column">
+            <div class="stock-page__column-front">
+              <div class="stock-page__list-icon">
+                <span>2</span>
+                <img src="img/수성.jpg" />
+              </div>
+              <div class="stock-page__list-text">
+                <span>수성샐바시온</span>
+                <div class="stock-page__list-percent-minus">
+                  <span>901원</span>
+                  <span>-25.5%</span>
+                </div>
+              </div>
+            </div>
+            <div class="stock-page__column-back">
+              <i class="fas fa-heart fa-lg"></i>
+            </div>
+          </li>
+          <li class="stock-page__list-column">
+            <div class="stock-page__column-front">
+              <div class="stock-page__list-icon">
+                <span>3</span>
+                <img src="img/베드 배스.jpg" />
+              </div>
+              <div class="stock-page__list-text">
+                <span>베드 배스 앤 비욘드</span>
+                <div class="stock-page__list-percent-plus">
+                  <span>2,577원</span>
+                  <span>+5.6%</span>
+                </div>
+              </div>
+            </div>
+            <div class="stock-page__column-back">
+              <i class="fas fa-heart fa-lg"></i>
+            </div>
+          </li>
+          <li class="stock-page__list-column">
+            <div class="stock-page__column-front">
+              <div class="stock-page__list-icon">
+                <span>4</span>
+                <img src="img/SOXL&SOXS.jpg" />
+              </div>
+              <div class="stock-page__list-text">
+                <span>SOXL</span>
+                <div class="stock-page__list-percent-minus">
+                  <span>21,410원</span>
+                  <span>-2.7%</span>
+                </div>
+              </div>
+            </div>
+            <div class="stock-page__column-back">
+              <i class="fas fa-heart fa-lg"></i>
+            </div>
+          </li>
+          <li class="stock-page__list-column">
+            <div class="stock-page__column-front">
+              <div class="stock-page__list-icon">
+                <span>5</span>
+                <img src="img/SOXL&SOXS.jpg" />
+              </div>
+              <div class="stock-page__list-text">
+                <span>SOXS</span>
+                <div class="stock-page__list-percent-plus">
+                  <span>25,118원</span>
+                  <span>+3.7%</span>
+                </div>
+              </div>
+            </div>
+            <div class="stock-page__column-back">
+              <i class="fas fa-heart fa-lg"></i>
+            </div>
+          </li>
+          <li class="stock-page__list-column">
+            <div class="stock-page__column-front">
+              <div class="stock-page__list-icon">
+                <span>6</span>
+                <img src="img/삼성.jpg" />
+              </div>
+              <div class="stock-page__list-text">
+                <span>삼성전자</span>
+                <div class="stock-page__list-percent-minus">
+                  <span>62,200원</span>
+                  <span>-1.5%</span>
+                </div>
+              </div>
+            </div>
+            <div class="stock-page__column-back">
+              <i class="fas fa-heart fa-lg"></i>
+            </div>
+          </li>
+          <li class="stock-page__list-column">
+            <div class="stock-page__column-front">
+              <div class="stock-page__list-icon">
+                <span>7</span>
+                <img src="img/TQQQ.jpg" />
+              </div>
+              <div class="stock-page__list-text">
+                <span>TQQQ</span>
+                <div class="stock-page__list-percent-minus">
+                  <span>31,899원</span>
+                  <span>-1.4%</span>
+                </div>
+              </div>
+            </div>
+            <div class="stock-page__column-back">
+              <i class="fas fa-heart fa-lg"></i>
+            </div>
+          </li>
+          <li class="stock-page__list-column">
+            <div class="stock-page__column-front">
+              <div class="stock-page__list-icon">
+                <span>8</span>
+                <img src="img/사운드하운드.jpg" />
+              </div>
+              <div class="stock-page__list-text">
+                <span>사운드하운드 AI</span>
+                <div class="stock-page__list-percent-plus">
+                  <span>4,838원</span>
+                  <span>+1.0%</span>
+                </div>
+              </div>
+            </div>
+            <div class="stock-page__column-back">
+              <i class="fas fa-heart fa-lg"></i>
+            </div>
+          </li>
+        </ul>
+        <div class="stock-page__more">
+          <span>더보기</span>
+        </div>
+        <div class="stock-page__follow-genius">
+          <div class="stock-page__follow-genius-text">
+            <span>주식천재 따라사기</span>
+            <span>먼저 부자가 된 그들의 선택은? </span>
+          </div>
+          <div class="stock-page__follow-genius-container">
+            <div class="stock-page__follow-genius-people">
+              <img src="img/글렌 그린버그.jpg" />
+              <span>글렌 그린버그</span>
+            </div>
+            <div class="stock-page__follow-genius-people">
+              <img src="img/캐시 우드.jpg" />
+              <span>캐시 우드</span>
+            </div>
+            <div class="stock-page__follow-genius-people">
+              <img src="img/켄 피셔.jpg" />
+              <span>켄 피셔</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <nav class="nav">
       <ul class="nav__list">
