change size Home-page icons

--- a/Home-page.html
+++ b/Home-page.html
@@ -30,10 +30,10 @@
         </div>
         <div class="screen-header__icons">
           <span>
-            <i class="fas fa-smile"></i>
+            <i class="fas fa-smile fa-lg"></i>
           </span>
           <span>
-            <i class="fas fa-bell"></i>
+            <i class="fas fa-bell fa-lg"></i>
           </span>
         </div>
       </div>
