create stock-setting page

--- a/stock.html
+++ b/stock.html
@@ -25,7 +25,9 @@
     <header class="stock-header">
       <div class="stock-header__bar">
         <span><i class="fas fa-search fa-lg"></i></span>
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <a href="stock-setting.html"
+          ><span><i class="fas fa-cog fa-lg"></i></span
+        ></a>
       </div>
     </header>
     <main class="stock-page">
