creating all-setting page

--- a/all.html
+++ b/all.html
@@ -24,7 +24,9 @@
     </div>
     <header class="all-header">
       <div class="all-header_setting-bar">
-        <span><i class="fas fa-cog fa-lg"></i></span>
+        <a href="all-setting.html"
+          ><span><i class="fas fa-cog fa-lg"></i></span
+        ></a>
       </div>
       <div class="all-header_title-text">
         <span>전체</span>
