complete: all-setting page

--- a/all-setting.html
+++ b/all-setting.html
@@ -7,7 +7,7 @@
     <title>stock-page</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
+  <body class="all-setting__body">
     <div class="status-bar">
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
@@ -23,10 +23,123 @@
       </div>
     </div>
     <header class="all-setting__top">
-      <div class="all-setting__top-bar"></div>
-      <div class="all-setting__top-profile"></div>
+      <div class="all-setting__top-bar">
+        <a href="all.html"
+          ><span><i class="fas fa-chevron-left"></i></span
+        ></a>
+        <span>설정</span>
+      </div>
+      <div class="all-setting__top-profile">
+        <div class="all-setting__profile-front">
+          <div class="all-setting__profile-icon">
+            <span><i class="fas fa-user fa-2x"></i></span>
+          </div>
+          <div class="all-setting__profile-text">
+            <span>고호성</span>
+            <span>내 정보 수정하기</span>
+          </div>
+        </div>
+        <div class="all-setting__profile-back">
+          <span><i class="fas fa-chevron-right"></i></span>
+        </div>
+      </div>
     </header>
-
+    <main class="all-setting__list-page">
+      <div class="all-setting__list-box">
+        <ul class="all-setting__list">
+          <li class="all-setting__list-column">
+            <span>태스프라임</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+          <li class="all-setting__list-column">
+            <span>홈 화면 설정</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+          <li class="all-setting__list-column">
+            <span>보안 및 인증서</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+          <li class="all-setting__list-column">
+            <span>개인정보 안심리포트</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+          <li class="all-setting__list-column">
+            <span>알림</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+          <li class="all-setting__list-column">
+            <span>태스페이</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+          <li class="all-setting__list-column">
+            <span>송금</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+          <li class="all-setting__list-column">
+            <span>자산 연결 (마이데이터)</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+          <li class="all-setting__list-column">
+            <div class="all-setting__list-columnLast">
+              <span>일반</span>
+              <span>화면 테마 · 진동</span>
+            </div>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+        </ul>
+      </div>
+      <div class="all-setting__list-box">
+        <ul class="all-setting__list">
+          <li class="all-setting__list-column">
+            <div class="all-setting__list-columnLast">
+              <span>새 연락처 불러오기</span>
+              <span>마지막 불러오기 2023.02.18. 14:01</span>
+            </div>
+          </li>
+          <li class="all-setting__list-column">
+            <span>연락처 차단</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+        </ul>
+      </div>
+      <div class="all-setting__list-box">
+        <ul class="all-setting__list">
+          <li class="all-setting__list-column">
+            <span>약관 및 개인정보 처리 동의</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+        </ul>
+      </div>
+      <div class="all-setting__list-box">
+        <ul class="all-setting__list">
+          <li class="all-setting__list-column">
+            <div class="all-setting__version-text">
+              <span>앱 버전</span>
+            </div>
+            <div class="all-setting__version-info">
+              <span>업데이트 하기</span>
+              <span><i class="fas fa-chevron-right"></i></span>
+            </div>
+          </li>
+        </ul>
+      </div>
+      <div class="all-setting__list-box">
+        <ul class="all-setting__list">
+          <li class="all-setting__list-column">
+            <span>탈퇴하기</span>
+            <span><i class="fas fa-chevron-right"></i></span>
+          </li>
+        </ul>
+      </div>
+    </main>
+    <footer class="all-setting__info">
+      <div class="all-setting__info-version">
+        <span>앱 버전 5.99.1</span>
+      </div>
+      <div class="all-setting__info-license">
+        <span>오픈소스 라이선스 보기</span>
+      </div>
+    </footer>
     <script
       src="https://kit.fontawesome.com/6478f529f2.js"
       crossorigin="anonymous"
