--- a/stock-setting.html
+++ b/stock-setting.html
@@ -7,7 +7,7 @@
     <title>stock-page</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body class="stock-setting_body">
+  <body class="stock-setting__body">
     <div class="status-bar">
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
