--- a/Home-page.html
+++ b/Home-page.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="status-bar">
+    <div class="home-status-bar">
       <div class="status-bar__column">
         <i class="fas fa-signal"></i>
         <span>KT</span>
