undo account input link

--- a/send.html
+++ b/send.html
@@ -36,11 +36,10 @@
       </div>
     </header>
     <main class="Send-page">
-      <a href="input-account.html"
-        ><div class="Send-page__input-account">
-          <span>계좌번호 입력</span>
-          <span><i class="fas fa-camera"></i></span></div
-      ></a>
+      <div class="Send-page__input-account">
+        <span>계좌번호 입력</span>
+        <span><i class="fas fa-camera"></i></span>
+      </div>
       <div class="Send-page__my-account">
         <div class="Send-page__title">
           <div class="Send-page__title-text">
